Added some comments

--- a/Netflix-Analysis.ipynb
+++ b/Netflix-Analysis.ipynb
@@ -22202,6 +22202,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teen TV shows has word school as most important word in description."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -22274,6 +22282,14 @@
     "\n",
     "# Show the plot\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can't find specific details of description on the rating"
    ]
   }
  ],
